# snake

./: CMakeLists.txt  README.md  run.bat
src/: main.cpp
